testsuite/tests/module/mod122.stderr

mod122.hs:5:6: error:
    Not in scope: type constructor or class ‘C’
    A data constructor of that name is in scope; did you mean DataKinds?
